# python-faux-rpm

./: Makefile  README.md  setup.cfg
rpm/: __init__.py  _rpm.py  transaction.py
