
[metadata]

name = preoccupied.faux-rpm
version = 4.18.2
description = fake rpm package

author = Christopher O'Brien
# O'Brien breaks so many tools

author_email = obriencj@preoccupied.net

copyright_years = 2024

license = GNU General Public License v3 (GPLv3)
license_files =
  LICENSE

long_description = file: README.md
long_description_content_type = text/markdown

home_page = https://github.com/obriencj/python-faux-rpm

platform = any

project_urls =
  Source = https://github.com/obriencj/python-faux-rpm
  Issues = https://github.com/obriencj/python-faux-rpm/issues

classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Build Tools
  Topic :: Utilities


[options]

packages =
  rpm


[tox:tox]

envlist = flake8
skip_missing_interpreters = True


[testenv]

basepython = python3.9

download = True
sitepackages = False
skip_install = True


[testenv:build]

commands =
  python -B -m build -n .

deps =
  build


[testenv:flake8]

commands =
  python -B -m flake8 rpm/

deps =
  flake8


[testenv:twine]

commands =
  python -B -m build -n .
  python -B -m twine check dist/*.whl

deps =
  build
  twine


[flake8]

ignore =
  E704,E743
  F403,F405

filename =
  *.py

exclude =
  __pycache__
  .*
  build
  dist
  docs
  gh-pages
  htmlcov
  setup.py
  tests
  todo
  tools


[gh-actions]

python =
  3.7: py37
  3.8: py38
  3.9: py39
  3.10: py310
  3.11: py311


# The end.
